--- a/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -18,6 +18,9 @@ Analisi delle tecnologie.
 
 \section{Analisi delle Blockchain}
 \subsection*{Premesse}
+Le metriche di valutazione sono state scelte in base alla loro importanza sia nella normale valutazione di una blockchain sia nello svolgimento di questo particolare progetto.
+È importante tenere in considerazione che, mentre alcune delle metriche sono dati di fatto, altre sono medie o stime teoriche che è importante approfondire prima di trarre una conclusione.
+Di seguito una rapida spiegazione di ogni metrica scelta.
 \subsection*{Ethereum}
 \subsection*{Polygon}
 \subsection*{xDai}
