--- a/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
+++ b/docs/interni/analisi_delle_tecnologie/analisi_delle_tecnologie.tex
@@ -22,7 +22,6 @@ Analisi delle tecnologie.
 \section{Analisi delle Blockchain}
 
 \subsection*{Premesse}
-<<<<<<< HEAD
 Le metriche di valutazione sono state scelte in base alla loro importanza sia nella normale valutazione di una blockchain sia nello svolgimento di questo particolare progetto.
 È importante tenere in considerazione che, mentre alcune delle metriche sono dati di fatto, altre sono medie o stime teoriche che è importante approfondire prima di trarre una conclusione.
 Di seguito una rapida spiegazione di ogni metrica scelta.
@@ -41,7 +40,7 @@ al venditore. È inoltre preferibile, ma meno significativo del precedente esemp
 in questa particolare fase una tassa di poche decine di centesimi è considerata accettabile in quanto pressoché in linea con il costo della competizione (Es.: prezzo di un bonifico;
 tassa percentuale trattenuta da servizi come \textit{Paypal}).
 È inoltre necessario esaminare come il costo per transazione cambierebbe in caso di un aumento della domanda di utilizzo della blockchain, per garantire un funzionamento
-accettabile anche nel futuro.
+accettabile anche nel futuro.\\
 
 \item \textbf{Transaction time: }
 Anche detta \textit{Transaction finality}, è il tempo medio \textit{attuale} in cui una transazione viene confermata e inserita permanentemente nella blockchain.
@@ -50,29 +49,92 @@ approvato. Dipende direttamente dalla tassa di transazione: se viene impostato u
 in un blocco e approvare quel blocco il prima possibile, così da aggiudicarsi la tassa di transazione. Al contrario, una tassa impostata per risultare in una transazione più economica
 sarà scelta per ultima dai miners/validatori, in quanto non hanno incentivo economico ad approvare tale transazione prima di altre che pagano di più.
 Per il progetto in esame è fondamentale un tempo di transazione molto basso (idealmente nell'ordine dei secondi) poichè il cliente nella fase di scannerizzazione del codice QR deve
-avere un'esperienza veloce.
+avere un'esperienza veloce.\\
+
+\newpage
 
 \item \textbf{Block time: }
 È il tempo medio \textit{attuale} in cui un blocco viene approvato nella blockchain. Indica la velocità con quale i miners/validatori di una rete approvano un blocco e va valutato insieme al parametro "grandezza di blocco": un blocco molto grande può contenere molte transazioni, quindi anche con un tempo di blocco non esemplare il tempo di transazione diminuisce considerevolmente
 perchè molte più transazioni possono essere incluse in un blocco, anche quelle che eventualmente rendono meno profitto ai miners/validatori; al contrario, con un blocco molto piccolo la velocità
 di approvazione di un blocco perde di importanza perchè molte meno transazioni possono essere incluse in un blocco creando forte competizione per ottenere l'approvazione della transazione risultando
-in transazioni con costi impostati per essere medio-bassi molto più lente.
+in transazioni con costi impostati per essere medio-bassi molto più lente.\\
 
 \item \textbf{Block size: }
-È il peso in memoria di un blocco. È proporzionale al numero di transazioni che un blocco può contenere: un blocco molto grande risulta in una velocità di transazione alta e un costo per transazione
-moderato/basso perchè c'è poca competizione da parte delle transazioni per essere inserite nel blocco, come spiegato nel punto precedente. Di contro, un blocco molto grande richiederebbe
-hardware più costoso per essere approvato nella blockchain (nel caso di reti con algoritmo di consenso PoW), creando una pressione di centralizzazione della rete verso enti con più disponibilità economica. Un blocco molto grande, indipendentemente dall'algoritmo di consenso, creerebbe la possibilità di transazioni così economiche che vi sarebbe un reale rischio di attacchi simili
-al dDos (spam di transazioni) che farebbero crescere di grandezza la blockchain a dismisura, richiedendo ai nodi hardware più costoso per memorizzarla e creando una pressione verso la centralizzazione. //manca roba qua
+È il peso in memoria di un blocco. È proporzionale al numero di transazioni che un blocco può contenere: un blocco molto grande risulta in TPS elevate e un costo per transazione
+moderato/basso poichè vi è poca competizione da parte delle transazioni per essere inserite nel blocco, come spiegato nel punto precedente. Un blocco molto grande, invece, richiederebbe una velocità di connessione e soprattutto una velocità di memorizzazione dei blocchi non indifferenti nei periodi di massimo utilizzo della rete al fine di emettere i blocchi e sincronizzare il nodo in tempo utile per ricevere il compenso economico, spingendo i nodi con requisiti hardware non sufficienti e quindi non economicamente incentivati a non fornire più il loro servizio risultando in una centralizzazione della blockchain.
+È importante considerare che vi è un dibattito aperto riguardo la grandezza \textit{limite} di un blocco: blocchi estremamente piccoli risultano in costi di transazione molto alti in periodi di grande utilizzo della rete, ma sono facilmente minabili/validabili senza requisiti hardware eccessivi e non rappresentano quindi un potenziale pericolo per la decentralizzazione come invece fanno
+dei blocchi molto grandi, che di contro garantiscono costi di transazione bassi e maggiori TPS. Riteniamo che entrambe le argomentazioni siano più che valide, dunque nella
+valutazione finale verrà cercato un compromesso tra le due visioni del problema.\\
 
+\item \textbf{TPS: }
+È il numero \textit{massimo teorico} di transazioni che una rete può processare in un secondo.
+È una metrica utile per valutare se una rete ha la capacità di elaborare una mole importante di transazioni che potrebbe dover affrontare in futuro senza
+congestionarsi e dunque richiedere costi di transazione eccessivi.
+Va sottolineato che è un valore puramente \textit{teorico} e non riflette per forza la reale capacità di carico di una rete.
+Alcune di queste misurazioni, infatti, sono state fatte in ambiente di test (\textit{testnet}) dove la velocità di approvazione dei blocchi è
+generalmente molto maggiore di quella della rete reale, in quanto l'ambiente di test è spesso estremamente centralizzato e offre hardware dedicato.
 
 \end{itemize}
+
+\newpage
+
 \subsubsection*{Sicurezza \& Decentralizzazione}
 Le metriche di valutazione della sicurezza e della decentralizzazione vogliono invece dare una stima teorica del livello di resistenza di ogni rete a possibili attacchi da parte di entità
 malevole. I tipi di attacchi possono avere natura diversa: è necessario che la rete scelta sia protetta sia da attacchi di tipo economico (Es.: gli sviluppatori vendono una grande quantità
 di token nativi nel tentativo di intascare il denaro degli investitori facendo crollare prezzo del token e la fiducia verso la rete; un'entità include una transazione malevola (spesa
 di token non posseduti) in un blocco e riesce a minarlo/validarlo) sia da attacchi mirati alla distruzione della rete (Es.: uno o pochi stati vietano il mining/la validazione dei blocchi
 e la rete perde gran parte o la totalità dei suoi nodi; un'azienda che controlla gran parte dei miners/validatori chiude o viene a sua volta attaccata e l'intera rete va offline).
-=======
+
+\begin{itemize}
+
+\item \textbf{Consensus: }
+Si tratta dell'algoritmo utilizzato dalla rete per raggiungere un consenso su quali blocchi siano effettivamente validi.
+Principalmente esistono due meccanismi di consenso ritenuti validi: \textit{Proof of Work} e \textit{Proof of Stake}.
+
+\begin{itemize}
+    \item \textbf{Proof of Work: }
+    In sintesi, un blocco viene approvato (minato) quando viene trovato un particolare numero che, se messo in coda alla lista delle transazioni, una funzione di hash che prende
+    in input la lista seguita da quel numero restituisce un output atteso dal protocollo. Per esempio, analizzando il \textit{whitepaper} di Bitcoin, si scopre che
+    l'output in binario che deve restituire la funzione di hash deve avere il numero arbitrario di 30 zeri in testa.
+    Siccome la funzione di hash scelta è un problema in NP, mentre è computazionamente facile accorgersi se l'output è corretto dato il numero in input, è invece estremamente difficile
+    trovare il numero in input che genera l'output desiderato. In pratica, vi è la certezza che il miner che fornisce il numero che genera l'output atteso dal protocollo
+    abbia impiegato molte risorse hardware per trovarlo, dato che l'unico modo per trovarlo è provare ogni singola combinazione finchè l'output non risulta valido.
+    Una volta che un miner "dichiara" di aver trovato il numero corretto, tutti i nodi connessi effettuano un rapido test per stabilire se l'output è quello atteso, procedendo
+    poi con un voto democratico per includere il blocco nella blockchain.
+    Con la garanzia che validare i blocchi sia computazionalmente difficile, si può garantire la sicurezza della rete da attacchi da parte di entità malevole: per controllare il 50\% + 1 della
+    rete al fine di emettere e approvare blocchi fraudolenti è necessaria un'enorme potenza computazionale e dunque un'enorme disponibilità economica.\\
+
+    \item \textbf{Proof of Stake: }
+    In questo tipo di consenso, invece, validare i blocchi non è computazionalmente difficile. La sicurezza deriva dal fatto che per diventare validatore è necessario uno
+    \textit{stake} di token nativi che sono bloccati e non spendibili durante l'attività da validatore. Mente esistono più variazioni di questo meccanismo che vanno approfondite, generalmente il funzionamento segue la seguente procedura.
+    Ad ogni blocco viene scelto (anche detto "eletto") un numero arbitrario di validatori tra tutti i validatori "candidati" online, questo gruppo
+    ha il compito di validare rapidamente le transazioni ed emettere un blocco corretto.
+    Se viene emesso un blocco fraudolento o se un validatore eletto va offline, parte dei token bloccati di quel validatore sono distrutti e persi per sempre.
+    \newpage
+    Vi è quindi un forte incentivo economico a non emettere blocchi non validi e a rimanere online. Inoltre, per appropriarsi della rete è necessaria
+    una disponibilità economica enorme per creare un numero significativo di validatori (considerando anche che non basta avere metà dei validatori candidati, è anche necessario che più della metà dei validatori eletti siano tra quelli), e anche se un'entità provasse un attacco del genere i soldi spesi per l'acquisto dei token sarebbero persi per sempre poichè se la rete collassasse il valore dei suoi token nativi collasserebbe con lei.
+
+\end{itemize}
+
+\item \textbf{Miners/Validators: }
+È il numero di miners (nelle blockchain con PoW) o validatori (nelle blockchain PoS) attualmente online.
+Una blockchain con pochi nodi è sicuramente più veloce, poichè meno nodi devono sincronizzare e votare per l'approvazione dei blocchi, ma è
+anche poco decentralizzata e quindi poco protetta da attacchi mirati da parte di entità o addirittura governi.
+Oltre ad essere un chiaro indicatore di quanto una rete è effettivamente decentralizzata, questa metrica gioca un ruolo chiave
+anche nella sicurezza: con pochi nodi attivi nella rete ottenerne più della metà diventa più facile, e questo apre la strada a possibili attacchi.\\
+
+\item \textbf{Top 100 wallet: }
+È la percentuale di token nativi che posseggono i 100 wallet più ricchi.
+È utile per avere un'idea di quanto potere è in mano a quanti pochi wallet.
+Questa metrica esclude il saldo di token di \textit{smart contracts} e di \textit{exchanges}, in quanto sono soggetti a regole di protocollo/regolamentazioni politiche e
+non possono esercitare potere diretto sulla rete.
+Un'alta percentuale di token nei primi 100 wallet può indicare un rischio di aggiornamenti o modifiche alla rete non decise dalla community (nei casi dove i token
+vengono utilizzati per votare gli upgrade in modo democratico dalla community) e quindi un forte sbilanciamento di potere verso una sola entità, come può anche indicare un rischio
+di estrema perdita di valore dei token e conseguentemente di fiducia nella rete con effetti a cascata disastrosi (perdita di nodi attivi, centralizzazione, perdita di investitori) nel caso gli sviluppatori o chi detiene una grande percentuale dei token li vendesse a prezzo di mercato in un breve periodo di tempo.
+
+\end{itemize}
+
+
 
 \renewcommand\arraystretch{1.6}
 
@@ -86,8 +148,8 @@ e la rete perde gran parte o la totalità dei suoi nodi; un'azienda che controll
 & \multicolumn{1}{l}{}                            & \multicolumn{5}{c}{\cellcolor[HTML]{D1D1D1}\textbf{Scalability}}    \\
 \cellcolor[HTML]{D1D1D1}\textbf{BlockChain} & \cellcolor[HTML]{D1D1D1}\textbf{Type}           & \cellcolor[HTML]{EFEFEF}\textbf{Thx fee} & \cellcolor[HTML]{FFFFFF}\textbf{Thx time} & \cellcolor[HTML]{EFEFEF}\textbf{Block Time} & \cellcolor[HTML]{FFFFFF}\textbf{Block Size}      & \cellcolor[HTML]{EFEFEF}\textbf{TPS}       \\
 \cellcolor[HTML]{EFEFEF}Ethereum            & \cellcolor[HTML]{EFEFEF}L1                      & \cellcolor[HTML]{FF8F8C}13\$    & \cellcolor[HTML]{FF8F8C}3m       & \cellcolor[HTML]{FFDD99}12s - 15s  & \cellcolor[HTML]{ADE694}$\sim$66 KBytes & \cellcolor[HTML]{FF8F8C}$\sim$15  \\
-Polygon                                     & L2 (ETH)                                 & \textless{}0.001\$              & 6s                               & 1-2s                               & \cellcolor[HTML]{ADE694}$\sim$82 KBytes & $\sim$7.2k                        \\
-\cellcolor[HTML]{EFEFEF}xDai                & \cellcolor[HTML]{EFEFEF}L2 (ETH)         & \textless{}0.001\$              & 5s                               & 5s                                 & \cellcolor[HTML]{ADE694}$\sim$66 KBytes & \cellcolor[HTML]{FFDD99}$\sim$90  \\
+Polygon                                     & Sidechain                                 & \textless{}0.001\$              & 6s                               & 1-2s                               & \cellcolor[HTML]{ADE694}$\sim$82 KBytes & $\sim$7.2k                        \\
+\cellcolor[HTML]{EFEFEF}xDai                & \cellcolor[HTML]{EFEFEF}Sidechain         & \textless{}0.001\$              & 5s                               & 5s                                 & \cellcolor[HTML]{ADE694}$\sim$66 KBytes & \cellcolor[HTML]{FFDD99}$\sim$90  \\
 Solana                                      & L1                                              & 0.0025\$                        & 2s                               & 2-6s                               & \cellcolor[HTML]{ADE694}$\sim$64 KBytes & $\sim$50k                         \\
 \cellcolor[HTML]{EFEFEF}Algorand            & \cellcolor[HTML]{EFEFEF}L1                      & \textless{}0.01\$               & 5s                               & 4.5s                               & \cellcolor[HTML]{FF8F8C}$\sim$1 MByte   & $\sim$1k                          \\
 Avalanche                                   & L1                                              & \cellcolor[HTML]{FFDD99}0.3\$   & \textless{}1s                    & \cellcolor[HTML]{D9D9D9}-          & \cellcolor[HTML]{FF8F8C}$\sim$1 MByte   & $\sim$4.5k                        \\
@@ -104,8 +166,8 @@ Cardano                                     & L1                                
 & \multicolumn{1}{l}{}                            & \multicolumn{3}{c}{\cellcolor[HTML]{D1D1D1}\textbf{Security \& Decentralization}}                                               \\
 \cellcolor[HTML]{D1D1D1}\textbf{BlockChain} & \cellcolor[HTML]{D1D1D1}\textbf{Type}           & \cellcolor[HTML]{FFFFFF}\textbf{\phantom . Consensus  \phantom . } & \cellcolor[HTML]{EFEFEF}\textbf{Miners/Validators} & \cellcolor[HTML]{FFFFFF}\textbf{Top 100 Wallet}         \\
 \cellcolor[HTML]{EFEFEF}Ethereum            & \cellcolor[HTML]{EFEFEF}L1                      & \cellcolor[HTML]{FFDD99}POW       & \cellcolor[HTML]{ADE694}1 500 000         & \cellcolor[HTML]{ADE694}$\sim$12.66\% of Supply \\
-Polygon                                     & L2 (ETH)                                        & POS                               & \cellcolor[HTML]{FF8F8C}100               & \cellcolor[HTML]{ADE694}$\sim$7.5\% of Supply   \\
-\cellcolor[HTML]{EFEFEF}xDai                & \cellcolor[HTML]{EFEFEF}L2 (ETH)                & POS                               & \cellcolor[HTML]{FF8F8C}24                & \cellcolor[HTML]{ADE694}$\sim$14\% of Supply    \\
+Polygon                                     & Sidechain                                        & POS                               & \cellcolor[HTML]{FF8F8C}100               & \cellcolor[HTML]{ADE694}$\sim$7.5\% of Supply   \\
+\cellcolor[HTML]{EFEFEF}xDai                & \cellcolor[HTML]{EFEFEF}Sidechain                & POS                               & \cellcolor[HTML]{FF8F8C}24                & \cellcolor[HTML]{ADE694}$\sim$14\% of Supply    \\
 Solana                                      & L1                                              & POS                               & \cellcolor[HTML]{FFDD99}1 272             & \cellcolor[HTML]{FF8F8C}$\sim$30\% of Supply    \\
 \cellcolor[HTML]{EFEFEF}Algorand            & \cellcolor[HTML]{EFEFEF}L1                      & POS                               & \cellcolor[HTML]{FF8F8C}380               & \cellcolor[HTML]{FFDD99}$\sim$26\% of Supply    \\
 Avalanche                                   & L1                                              & POS                               & \cellcolor[HTML]{FFDD99}1 180             & \cellcolor[HTML]{ADE694}$\sim$9.3\% of Supply   \\
@@ -114,8 +176,6 @@ Cardano                                     & L1                                
 \cellcolor[HTML]{EFEFEF}Harmony             & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}L1} & POS                               & \cellcolor[HTML]{FF8F8C}280               & \cellcolor[HTML]{FF8F8C}$\sim$40\% of Supply
 \end{tabular}
 \end{center}
-
->>>>>>> 11d5a489439faa61b602cb96f07a7289e4470c7e
 
 \subsection*{Ethereum}
 \subsection*{Polygon}
